--- a/教学代码/day05-es6/练习.html
+++ b/教学代码/day05-es6/练习.html
@@ -270,16 +270,37 @@
         // console.log(p6)
 
 
-        let name = Symbol("name");
-        let todo = Symbol("todo");
-        let obj = {
-            name: "小王"
-        }
-        obj[name] = "老王"
+        // let name = Symbol("name");
+        // let todo = Symbol("todo");
+        // let obj = {
+        //     name: "小王"
+        // }
+        // obj[name] = "老王"
 
-        console.log(obj);
-        console.log(obj.name)
-        console.log(obj[name])
+        // console.log(obj);
+        // console.log(obj.name)
+        // console.log(obj[name])
+
+        
+
+        const{log}=console
+
+        log(Math.pow(3,3))
+        log(3**3)//立方可以直接用**来表示
+        log(Math.floor(1.12))// 1 向下取整
+        log(Math.ceil(1.33))// 2 向上取整
+        log(Math.trunc(1.99))// 1 取整
+
+
+        log(Math.sign(2.3))//判断一个数是正负还是NaN
+
+        log(Math.cbrt(8))//立方根
+        log(Math.sqrt(9))//平方根
+
+
+        log(Math.hypot(4,9,16))//求所以参数平方和的平方根
+        
+
     </script>
 </body>
 
