--- a/教学代码/day05-es6/练习.html
+++ b/教学代码/day05-es6/练习.html
@@ -283,22 +283,53 @@
 
         
 
-        const{log}=console
+        // const{log}=console
 
-        log(Math.pow(3,3))
-        log(3**3)//立方可以直接用**来表示
-        log(Math.floor(1.12))// 1 向下取整
-        log(Math.ceil(1.33))// 2 向上取整
-        log(Math.trunc(1.99))// 1 取整
-
-
-        log(Math.sign(2.3))//判断一个数是正负还是NaN
-
-        log(Math.cbrt(8))//立方根
-        log(Math.sqrt(9))//平方根
+        // log(Math.pow(3,3))
+        // log(3**3)//立方可以直接用**来表示
+        // log(Math.floor(1.12))// 1 向下取整
+        // log(Math.ceil(1.33))// 2 向上取整
+        // log(Math.trunc(1.99))// 1 取整
 
 
-        log(Math.hypot(4,9,16))//求所以参数平方和的平方根
+        // log(Math.sign(2.3))//判断一个数是正负还是NaN
+
+        // log(Math.cbrt(8))//立方根
+        // log(Math.sqrt(9))//平方根
+
+
+        // log(Math.hypot(4,9,16))//求所以参数平方和的平方根
+
+
+        // let p={
+        //     do(){
+        //         console.log('eat')
+        //     },
+        // }
+        // p.do()
+        // let a='name'
+        // let b='age'
+        // let obj={
+        //     [a]:'zs',
+        //     [b+'ab']:'18'//可以改变key值
+        // }
+        // console.log(obj)
+        // for(let key in obj){
+        //     console.log(obj[key])//打印key值
+        // }
+
+        let {a,b,...c}={
+            a:1,
+            b:2,
+            c:3,
+            d:4,
+            e:5,
+            f:6
+        }
+        console.log(f)
+
+
+
         
 
     </script>
