--- a/教学代码/day05-es6/06-对象的拓展.html
+++ b/教学代码/day05-es6/06-对象的拓展.html
@@ -22,21 +22,21 @@
       //   }
       //   console.log(obj)
 
-      //   for (let key in obj) {
-      //     console.log(obj[key])
-      //   }
+        // for (let key in obj) {
+        //   console.log(obj[key])
+        // }
 
-      //   let { a, b, ...c } = {
-      //     a: 1,
-      //     b: 2,
-      //     c: 3,
-      //     d: 4,
-      //     e: 5,
-      //   }
-      //   console.log(c)
-      //   console.log(Object.is(1, 1))
-      //   console.log(Object.is({}, {}))
-      //   console.log(Object.is(NaN, NaN))
+        let { a, b, ...c } = {
+          a: 1,
+          b: 2,
+          c: 3,
+          d: 4,
+          e: 5,
+        }
+        console.log(c)
+        console.log(Object.is(1, 1))
+        console.log(Object.is({}, {}))
+        console.log(Object.is(NaN, NaN))
 
       let obj1 = { a: 1 }
       let obj2 = { b: 2 }
