--- a/教学代码/day05-es6/07-Symbol枚举.html
+++ b/教学代码/day05-es6/07-Symbol枚举.html
@@ -22,26 +22,26 @@
         },
       }
       //修改
-      //   obj.name = 'xiaowang'
-      //   obj.todo = () => {
-      //     console.log('someThing~')
-      //   }
-      //   console.log(obj.name)
-      //   obj.todo()
+        obj.name = 'xiaowang'
+        obj.todo = () => {
+          console.log('someThing~')
+        }
+        console.log(obj.name)
+        obj.todo()
 
-      //   let name = Symbol('name')
-      //   let todo = Symbol('todo')
+        let name = Symbol('name')
+        let todo = Symbol('todo')
 
-      //   obj[name] = '老王'
+        obj[name] = '老王'
 
-      //   console.log(obj)
-      //   console.log(obj.name)
-      //   console.log(obj[name])
-      //   new Symbol()
-      //   console.log(String(Symbol('a'))) //Symbol(a)
-      //   console.log(Boolean(Symbol())) //true
-      // //   console.log(Symbol() + 1) //Cannot convert a Symbol value to a number
-      //   console.log(Number(Symbol())) //Cannot convert a Symbol value to a number
+        console.log(obj)
+        console.log(obj.name)
+        console.log(obj[name])
+        // new Symbol()
+        console.log(String(Symbol('a'))) //Symbol(a)
+        console.log(Boolean(Symbol())) //true
+      //   console.log(Symbol() + 1) //Cannot convert a Symbol value to a number
+        console.log(Number(Symbol())) //Cannot convert a Symbol value to a number
 
       //   {
       //     let obj = {
