--- a/教学代码/day05-es6/练习.html
+++ b/教学代码/day05-es6/练习.html
@@ -318,18 +318,78 @@
         //     console.log(obj[key])//打印key值
         // }
 
-        let {a,b,...c}={
-            a:1,
-            b:2,
-            c:3,
-            d:4,
-            e:5,
-            f:6
+        // let {a,b,...c}={
+        //     a:1,
+        //     b:2,
+        //     c:3,
+        //     d:4,
+        //     e:5,
+        //     f:6
+        // }
+        // console.log(c)//接受后面所有的
+
+        // console.log(Object.is(1, 1))//true
+        // console.log(Object.is(NaN, NaN))//true
+        // console.log(Object.is({}, {}))//false
+
+
+        // let obj1={a:1}
+        // let obj2={b:2}
+        // let obj3={c:3}
+        // let newObj=Object.assign(obj1,obj2,obj3)//合并对象
+        // console.log(newObj)
+
+
+        // let s=Symbol('a')
+        // let s1=Symbol('b')
+        // console.log(s)
+        // console.log(s1)
+        // console.log(typeof s)//Symbol是唯一的
+        // console.log(s===s1)
+
+        
+
+        let obj ={
+            name:'lily',
+            todo(){
+                console.log('eat')
+            }
         }
-        console.log(f)
+        obj.name='xiaowang'
+        obj.todo=()=>{
+            console.log('someThing~')
+        }
+        console.log(obj.name)//xiaowang
+        obj.todo()//someThing~
+
+        let name=Symbol('name')
+        let todo=Symbol('todo')
+        obj[name]='老王'
+        console.log(obj)//{name: "xiaowang", Symbol(name): "老王", todo: ƒ}
+        console.log(obj.name)//xiaowang
+        console.log(obj[name])//老王
+        // new Symbol()//报错
+        console.log(String(Symbol('a')))//Symbol(a)
+        console.log(Boolean(Symbol()))//true
+        // console.log(Number(Symbol()))//报错
 
 
 
+        {
+        let obj = {
+          name: 'lily', //原有对象拥有name属性
+          age: 18,
+        }
+        let name = Symbol()
+        obj[name] = '再见' //如果直接设置，则再也获取不到这个属性了
+
+        for (let i in obj) {
+          console.log(i)
+        }
+
+        //可以使用 Object.getOwnPropertySymbols方法来拿
+        console.log(Object.getOwnPropertySymbols(obj)) //[Symbol()]
+      }
         
 
     </script>
